# pyroscript

./: .gitignore  Dockerfile  Readme.rst  docker-compose.yaml  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst  intro.rst  swagger.yaml
front/web/: package-lock.json  package.json
front/web/src/: App.vue  config.js  main.js
front/web/src/components/: ListTargets.vue  ListWifis.vue
src/pyroscript/: __init__.py  routes.py
src/pyroscript/handlers/: aircrack.py  aireplay.py  monitor.py  reaver.py  reaver_scan.py  results.py  scan.py  start_session.py  wifiphiser.py
tests/unit/: conftest.py
