[tool.poetry]
name = "pyroscript"
version = "0.1.0"
description = ""
authors = ["David Francos <opensource@davidfrancos.net>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp_apiset = "^0.9.5"
aiohttp_jinja2 = "^1.1"
cleo = "^0.7.2"
pygogo = "^0.12.0"
aiohttp_sentry = "^0.5.0"
babel = "^2.6"
behave = "^1.2"
atq = "^0.0.2"
aiojobs = "^0.2.2"
dotmap = "^1.3"
pyrcrack = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest-aiohttp = "^0.3.0"
sphinx = "^1.8"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
aioresponses = "^0.6.0"
asynctest = "^0.12.2"

[tool.poetry.scripts]
pyroscript = 'pyroscript:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

